# xpandas

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  alpha.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
benchmarks/: bench_comparison.py  bench_ops.py  bench_wrappers.py
docs/: CONTRIBUTING_zh.md  HANDOFF.md  README_zh.md
examples/: alpha_momentum.py  alpha_ts.py  alpha_vwap.py  feature_engineering.py  pandas_migration.py  trace_and_save.py  wrapper_api_tour.py
inference/: main.cpp
tests/: test_alpha_e2e.py  test_alpha_xpandas_e2e.py  test_edge_cases.py  test_ops.py  test_torchscript_compat.py  test_wrappers.py  test_wrappers_extended.py
xpandas/: __init__.py  ops_meta.py  wrappers.py
xpandas/csrc/ops/: breakout_signal.cpp  cast.cpp  clip.cpp  compare.cpp  cumulative.cpp  ewm.cpp  fillna.cpp  groupby_agg.cpp  groupby_minmax.cpp  groupby_resample_ohlc.cpp  lookup.cpp  math_ops.cpp  ops.h  pct_change.cpp  rank.cpp  register.cpp  rolling.cpp  rolling_minmax.cpp  shift.cpp  sort.cpp  to_datetime.cpp  where.cpp
