[build-system]
requires = ["setuptools>=61.0", "torch>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpandas"
version = "0.1.0"
description = "Pandas-like DataFrame API backed by PyTorch custom ops for TorchScript"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pandas",   # for reference / comparison tests
]

[tool.setuptools.packages.find]
include = ["xpandas*"]
